homarr-stack/homarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      automountServiceAccountToken: true
      serviceAccountName: homarr
      securityContext:
        fsGroup: 1000
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr
          ports:
            - containerPort: 7575
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /
              port: 7575
            failureThreshold: 12
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 7575
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 7575
            periodSeconds: 30
            failureThreshold: 5
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: db-storage
              mountPath: /appdata
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: homarr-database-longhorn
        - name: connector-seed-script
          configMap:
            name: homarr-connector-seed
        - name: connectors
          secret:
            secretName: homarr-connectors
