homarr-stack/allow-uptime-kuma.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-uptime-kuma
  namespace: homarr
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma
          podSelector:
            matchLabels:
              app: uptime-kuma
